[gd_scene load_steps=35 format=2]

[ext_resource path="res://scripts/vehicles/chains_awe.gd" type="Script" id=1]
[ext_resource path="res://scenes/particles/nitro_flame.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/cameras_&_ui/follow_camera.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/particles/nitro_flame_cpu.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/particles/death_smoke_cpu.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/particles/death_smoke.tscn" type="PackedScene" id=6]
[ext_resource path="res://resources/materials/vehicles/ca_wheel.material" type="Material" id=7]
[ext_resource path="res://scenes/particles/drift_smoke_cpu.tscn" type="PackedScene" id=8]
[ext_resource path="res://resources/materials/vehicles/chains_awe.material" type="Material" id=9]
[ext_resource path="res://scenes/particles/drift_smoke.tscn" type="PackedScene" id=10]
[ext_resource path="res://resources/meshes/vehicles/chains_awe.tres" type="ArrayMesh" id=11]
[ext_resource path="res://resources/materials/weapon_components/chainsaw.material" type="Material" id=12]
[ext_resource path="res://resources/meshes/weapon_components/chainsaw.tres" type="ArrayMesh" id=13]
[ext_resource path="res://resources/materials/destruction/death_explosion.material" type="Material" id=14]
[ext_resource path="res://resources/meshes/vehicles/wheel_0.tres" type="ArrayMesh" id=15]
[ext_resource path="res://resources/materials/weapon_components/chainsaw_launcher.material" type="Material" id=16]
[ext_resource path="res://resources/meshes/weapon_components/chainsaw_launcher.tres" type="ArrayMesh" id=17]
[ext_resource path="res://scenes/particles/muzzle_flash.tscn" type="PackedScene" id=18]
[ext_resource path="res://scenes/particles/muzzle_flash_cpu.tscn" type="PackedScene" id=19]
[ext_resource path="res://scenes/particles/chainsaw_sparks.tscn" type="PackedScene" id=20]
[ext_resource path="res://scenes/particles/chainsaw_sparks_cpu.tscn" type="PackedScene" id=21]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.5

[sub_resource type="ConvexPolygonShape" id=6]
points = PoolVector3Array( 0.96, 0.875, 3.31, -0.96, 0.875, 3.31, 0.865, 1.716, 0.917, -0.865, 1.716, 0.917, 0.865, 1.716, -0.822, -0.865, 1.716, -0.822, 1.01, 1.091, -3.313, -1.01, 1.091, -3.313, 1.01, -0.001, 3.31, -1.01, -0.001, 3.31, 1.01, 0.112, -3.313, -1.01, 0.112, -3.313 )

[sub_resource type="QuadMesh" id=15]
resource_local_to_scene = true

[sub_resource type="BoxShape" id=24]
extents = Vector3( 0.0752258, 0.270823, 0.246891 )

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Body/ExplosionMesh:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/ExplosionMesh:mesh:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/ExplosionMesh:material/0:albedo_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 0.321569, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/ChainsawFrontLeft:translation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1.09967, 0.939801, -0.0185963 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Body/ChainsawFrontLeft:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Body/ChainsawBackLeft:translation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1.09967, 0.939801, -0.357919 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Body/ChainsawBackLeft:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "death"
tracks/0/type = "value"
tracks/0/path = NodePath("Body/ExplosionMesh:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/ExplosionMesh:mesh:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.105112, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 6, 6 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/ExplosionMesh:material/0:albedo_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 0.490196, 1 ), Color( 1, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "left_saws_active"
length = 0.1
loop = true
step = 0.016
tracks/0/type = "value"
tracks/0/path = NodePath("Body/ChainsawFrontLeft:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.016, 0.032, 0.048, 0.064, 0.08, 0.096 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1.09967, 0.197079, -0.0185963 ), Vector3( 1.09967, 0.230209, -0.0185963 ), Vector3( 1.09967, 0.197079, -0.0185963 ), Vector3( 1.09967, 0.230209, -0.0185963 ), Vector3( 1.09967, 0.197079, -0.0185963 ), Vector3( 1.09967, 0.230209, -0.0185963 ), Vector3( 1.09967, 0.197079, -0.0185963 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/ChainsawBackLeft:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.016, 0.032, 0.048, 0.064, 0.08, 0.096 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1.1, 0.23, -0.358 ), Vector3( 1.1, 0.19687, -0.358 ), Vector3( 1.1, 0.23, -0.358 ), Vector3( 1.1, 0.19687, -0.358 ), Vector3( 1.1, 0.23, -0.358 ), Vector3( 1.1, 0.19687, -0.358 ), Vector3( 1.1, 0.23, -0.358 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "left_saws_down"
length = 0.05
step = 0.016
tracks/0/type = "value"
tracks/0/path = NodePath("Body/ChainsawFrontLeft:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.016, 0.048 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1.09967, 0.939801, -0.0185963 ), Vector3( 1.09967, 0.45117, -0.0185963 ), Vector3( 1.09967, 0.230209, -0.0185963 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/ChainsawFrontLeft:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.016, 0.048 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 1, 1, 1.5 ), Vector3( 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/ChainsawBackLeft:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.016, 0.048 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1.09967, 0.939801, -0.357919 ), Vector3( 1.1, 0.451, -0.358 ), Vector3( 1.1, 0.23, -0.358 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/ChainsawBackLeft:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.016, 0.048 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 1, 1, 1.5 ), Vector3( 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "left_saws_up"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body/ChainsawFrontLeft:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1.09967, 0.230209, -0.0185963 ), Vector3( 1.1, 0.25, -0.019 ), Vector3( 1.1, 1, -0.019 ), Vector3( 1.1, 0.94, -0.019 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/ChainsawBackLeft:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1.1, 0.23, -0.358 ), Vector3( 1.1, 0.25, -0.358 ), Vector3( 1.1, 1, -0.358 ), Vector3( 1.1, 0.94, -0.358 ) ]
}

[sub_resource type="Animation" id=20]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Body/ChainsawFrontRight:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -1.1, 0.94, -0.019 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/ChainsawFrontRight:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/ChainsawBackRight:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -1.1, 0.94, -0.358322 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/ChainsawBackRight:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=23]
resource_name = "right_saws_active"
length = 0.1
loop = true
step = 0.016
tracks/0/type = "value"
tracks/0/path = NodePath("Body/ChainsawFrontRight:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.016, 0.032, 0.048, 0.064, 0.08, 0.096 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -1.1, 0.197, -0.019 ), Vector3( -1.1, 0.23, -0.019 ), Vector3( -1.1, 0.197, -0.019 ), Vector3( -1.1, 0.23, -0.019 ), Vector3( -1.1, 0.197, -0.019 ), Vector3( -1.1, 0.23, -0.019 ), Vector3( -1.1, 0.197, -0.019 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/ChainsawBackRight:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.016, 0.032, 0.048, 0.064, 0.08, 0.096 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -1.1, 0.23, -0.358 ), Vector3( -1.1, 0.197, -0.358 ), Vector3( -1.1, 0.23, -0.358 ), Vector3( -1.1, 0.197, -0.358 ), Vector3( -1.1, 0.23, -0.358 ), Vector3( -1.1, 0.197, -0.358 ), Vector3( -1.1, 0.23, -0.358 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "right_saws_down"
length = 0.05
step = 0.016
tracks/0/type = "value"
tracks/0/path = NodePath("Body/ChainsawFrontRight:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.016, 0.048 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -1.1, 0.94, -0.019 ), Vector3( -1.1, 0.451, -0.019 ), Vector3( -1.1, 0.23, -0.019 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/ChainsawFrontRight:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.016, 0.048 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 1, 1, 1.55 ), Vector3( 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/ChainsawBackRight:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.016, 0.048 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -1.1, 0.94, -0.358322 ), Vector3( -1.1, 0.451, -0.358 ), Vector3( -1.1, 0.23, -0.358 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/ChainsawBackRight:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.016, 0.048 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 1, 1, 1.5 ), Vector3( 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=22]
resource_name = "right_saws_up"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body/ChainsawFrontRight:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -1.1, 0.23, -0.019 ), Vector3( -1.1, 0.25, -0.019 ), Vector3( -1.1, 1, -0.019 ), Vector3( -1.1, 0.94, -0.019 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/ChainsawBackRight:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -1.1, 0.23, -0.358 ), Vector3( -1.1, 0.25, -0.358 ), Vector3( -1.1, 1, -0.358 ), Vector3( -1.1, 0.94, -0.358322 ) ]
}

[node name="RootSpatial" type="Spatial"]
_import_path = NodePath(".")
__meta__ = {
"__editor_plugin_screen__": "3D"
}

[node name="Body" type="VehicleBody" parent="." groups=["combat_vehicle"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0 )
collision_mask = 3
physics_material_override = SubResource( 1 )
script = ExtResource( 1 )

[node name="WheelFrontLeft" type="VehicleWheel" parent="Body"]
transform = Transform( 1.15, 0, 0, 0, 1.15, 0, 0, 0, 1.15, 0.925, 0.197, 2.411 )
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.4
wheel_radius = 0.36
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="Mesh" type="MeshInstance" parent="Body/WheelFrontLeft"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
portal_mode = 3
mesh = ExtResource( 15 )
material/0 = ExtResource( 7 )

[node name="WheelFrontRight" type="VehicleWheel" parent="Body"]
transform = Transform( 1.15, 0, 0, 0, 1.15, 0, 0, 0, 1.15, -0.925, 0.197, 2.411 )
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.4
wheel_radius = 0.36
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="Mesh" type="MeshInstance" parent="Body/WheelFrontRight"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
portal_mode = 3
mesh = ExtResource( 15 )
material/0 = ExtResource( 7 )

[node name="WheelBackLeft" type="VehicleWheel" parent="Body"]
transform = Transform( 1.15, 0, 0, 0, 1.15, 0, 0, 0, 1.15, 0.925, 0.197, -2.16 )
use_as_traction = true
wheel_roll_influence = 0.4
wheel_radius = 0.36
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="Mesh" type="MeshInstance" parent="Body/WheelBackLeft"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
portal_mode = 3
mesh = ExtResource( 15 )
material/0 = ExtResource( 7 )

[node name="WheelBackRight" type="VehicleWheel" parent="Body"]
transform = Transform( 1.15, 0, 0, 0, 1.15, 0, 0, 0, 1.15, -0.925, 0.197, -2.16 )
use_as_traction = true
wheel_roll_influence = 0.4
wheel_radius = 0.36
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="Mesh" type="MeshInstance" parent="Body/WheelBackRight"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
portal_mode = 3
mesh = ExtResource( 15 )
material/0 = ExtResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="Body"]
shape = SubResource( 6 )

[node name="CameraBase" parent="Body" instance=ExtResource( 3 )]

[node name="BodyMesh" type="MeshInstance" parent="Body"]
portal_mode = 3
mesh = ExtResource( 11 )
material/0 = ExtResource( 9 )

[node name="ExplosionMesh" type="MeshInstance" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.76547, 0 )
visible = false
portal_mode = 3
cast_shadow = 0
mesh = SubResource( 15 )
material/0 = ExtResource( 14 )

[node name="ChainsawFrontLeft" type="MeshInstance" parent="Body"]
transform = Transform( -4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 1.09967, 0.939801, -0.0185963 )
portal_mode = 3
mesh = ExtResource( 13 )
material/0 = ExtResource( 12 )

[node name="ChainsawFrontRight" type="MeshInstance" parent="Body"]
transform = Transform( -4.37114e-08, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, -1.1, 0.94, -0.019 )
portal_mode = 3
mesh = ExtResource( 13 )
material/0 = ExtResource( 12 )

[node name="ChainsawBackLeft" type="MeshInstance" parent="Body"]
transform = Transform( -4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 1.09967, 0.939801, -0.357919 )
portal_mode = 3
mesh = ExtResource( 13 )
material/0 = ExtResource( 12 )

[node name="ChainsawBackRight" type="MeshInstance" parent="Body"]
transform = Transform( -4.37114e-08, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, -1.1, 0.94, -0.358322 )
portal_mode = 3
mesh = ExtResource( 13 )
material/0 = ExtResource( 12 )

[node name="ChainsawLauncher" type="MeshInstance" parent="Body"]
portal_mode = 3
mesh = ExtResource( 17 )
material/0 = ExtResource( 16 )

[node name="ShotPositionSniper" type="RayCast" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.686228, 3.32398 )

[node name="ShotPositionLauncher" type="Position3D" parent="Body"]
transform = Transform( -1, 0, -8.74228e-08, -3.652e-08, 0.908566, 0.41774, 7.94294e-08, 0.41774, -0.908566, 0, 1.3432, -2.20725 )

[node name="SawAreaLeft" type="Area" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.09968, -0.209553, -0.189 )
collision_layer = 0
collision_mask = 3
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Body/SawAreaLeft"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.171537, 0 )
shape = SubResource( 24 )

[node name="SawAreaRight" type="Area" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.1, -0.21, -0.189 )
collision_layer = 0
collision_mask = 3
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Body/SawAreaRight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.171537, 0 )
shape = SubResource( 24 )

[node name="MuzzleFlash" parent="Body" instance=ExtResource( 18 )]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0.686228, 3.32398 )
one_shot = true

[node name="CPUMuzzleFlash" parent="Body" instance=ExtResource( 19 )]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0.686228, 3.32398 )
one_shot = true

[node name="SawSparksFrontLeft" parent="Body" instance=ExtResource( 20 )]
transform = Transform( 0.833249, 0.552897, 0, -0.552897, 0.833249, 0, 0, 0, 1, 1.09949, -0.207887, -0.019 )

[node name="SawSparksFrontRight" parent="Body" instance=ExtResource( 20 )]
transform = Transform( 0.833249, -0.552897, 0, 0.552897, 0.833249, 0, 0, 0, 1, -1.099, -0.207739, -0.019 )

[node name="SawSparksBackLeft" parent="Body" instance=ExtResource( 20 )]
transform = Transform( 0.833249, 0.552897, 0, -0.552897, 0.833249, 0, 0, 0, 1, 1.09897, -0.207851, -0.358 )

[node name="SawSparksBackRight" parent="Body" instance=ExtResource( 20 )]
transform = Transform( 0.833249, -0.552897, 0, 0.552897, 0.833249, 0, 0, 0, 1, -1.099, -0.208, -0.358 )

[node name="SawCPUSparksFrontLeft" parent="Body" instance=ExtResource( 21 )]
transform = Transform( 0.833249, 0.552897, 0, -0.552897, 0.833249, 0, 0, 0, 1, 1.099, -0.208, -0.019 )

[node name="SawCPUSparksFrontRight" parent="Body" instance=ExtResource( 21 )]
transform = Transform( 0.833249, -0.552897, 0, 0.552897, 0.833249, 0, 0, 0, 1, -1.099, -0.208, -0.019 )

[node name="SawCPUSparksBackLeft" parent="Body" instance=ExtResource( 21 )]
transform = Transform( 0.833249, 0.552897, 0, -0.552897, 0.833249, 0, 0, 0, 1, 1.099, -0.208, -0.358 )

[node name="SawCPUSparksBackRight" parent="Body" instance=ExtResource( 21 )]
transform = Transform( 0.833249, -0.552897, 0, 0.552897, 0.833249, 0, 0, 0, 1, -1.099, -0.208, -0.358 )

[node name="DeathParticles" parent="Body" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.86689, 1.58121 )

[node name="DeathCPUParticles" parent="Body" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.86689, 1.58121 )

[node name="DriftParticles" type="Spatial" parent="Body"]

[node name="DriftParticlesLeft" parent="Body/DriftParticles" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.96222, 0.135069, -2.15579 )

[node name="DriftParticlesRight" parent="Body/DriftParticles" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.962, 0.135069, -2.15579 )

[node name="DriftCPUParticles" type="Spatial" parent="Body"]

[node name="DriftCPUParticlesLeft" parent="Body/DriftCPUParticles" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.96222, 0.135069, -2.15579 )

[node name="DriftCPUParticlesRight" parent="Body/DriftCPUParticles" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.962, 0.135069, -2.15579 )

[node name="NitroParticles" type="Spatial" parent="Body"]

[node name="NitroParticlesLeft" parent="Body/NitroParticles" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.834711, 0.139666, -3.35173 )

[node name="NitroParticlesRight" parent="Body/NitroParticles" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.835, 0.139961, -3.35128 )

[node name="NitroCPUParticles" type="Spatial" parent="Body"]

[node name="NitroCPUParticlesLeft" parent="Body/NitroCPUParticles" instance=ExtResource( 4 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.834334, 0.139961, -3.35128 )

[node name="NitroCPUParticlesRight" parent="Body/NitroCPUParticles" instance=ExtResource( 4 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.835, 0.139961, -3.35128 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_process_mode = 0
anims/RESET = SubResource( 7 )
anims/death = SubResource( 16 )
anims/left_saws_active = SubResource( 19 )
anims/left_saws_down = SubResource( 17 )
anims/left_saws_up = SubResource( 18 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 20 )
anims/right_saws_active = SubResource( 23 )
anims/right_saws_down = SubResource( 21 )
anims/right_saws_up = SubResource( 22 )

[node name="RespawnTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0
one_shot = true

[node name="SniperTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="LauncherTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 1.2
one_shot = true

[node name="StuckTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 30.0

[connection signal="animation_finished" from="AnimationPlayer" to="Body" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer2" to="Body" method="_on_AnimationPlayer2_animation_finished"]
[connection signal="timeout" from="RespawnTimer" to="Body" method="_on_RespawnTimer_timeout"]
[connection signal="timeout" from="SniperTimer" to="Body" method="_on_SniperTimer_timeout"]
[connection signal="timeout" from="LauncherTimer" to="Body" method="_on_LauncherTimer_timeout"]
[connection signal="timeout" from="StuckTimer" to="Body" method="_on_StuckTimer_timeout"]
